# virtual_assistant

./: .gitignore  README.md  pyproject.toml  virtual_assistant.ipynb
